--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </ol>
 
 <h2>WEB </h2><h3>뉴스</h3>
-<p><strong><u>[앵커]</u></strong><br>
+<p><strong><u>[앵커2]</u></strong><br>
 
     <strong>강원 산지</strong>에 대설특보가 내려진 가운데 <u>영동지역</u>에 눈이 내리기 시작했습니다.<br>
     
