--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>WEB1-Welcome</title>
 <meta charset="utf-8">
 </head>
-<body>
+
 <h1><a href="index.html">WEB</a></h1>   
 <ol>
     <li><a href="1.html">HTML</a></li> 
@@ -24,15 +24,15 @@
     <br><strong>조연주 </strong>기자, 현재 <strong><u>눈</u></strong> 상황 어떤가요?
     </p> 
 <img src="자연.jpg"width="50%">
- <br>출처 : <a href="https://news.kbs.co.kr/news/view.do?ncd=7366673&ref=N"target="_blank" title="html5 speicification">
-    https://news.kbs.co.kr/news/view.do?ncd=7366673&ref=N</a>
+ <br>출처 : <a href="https://youtu.be/PuLzhd-R5gI"target="_blank" title="html5 speicification">
+    https://youtu.be/PuLzhd-R5gI</a>
  <br>‘지역신문’은 왜 지원해야할까? 오랜 기간동안 지역신문을 읽어온 독자들이 직접 답했다. 독자들은 지역신문에 대한 공적 지원이 단순히 정보 제공에서 나아가 지역신문의 생존과 발전, 지역의 여론 형성, 건강한 지역 밀착형 콘텐츠 생산을 위해 필요하다고 답했다. 
 
 한국언론진흥재단(언론재단)은 국내 최초로 지역신문을 정기적으로 구독하는 독자들을 대상으로 지역신문에 대한 평가 등을 조사해 발표했다. 언론재단이 지난해 12월 펴낸 ‘지역신문 발전을 위한 지원 계획 수립 연구’에 따르면 우선지원대상 지역신문 구독자들 85.9%가 지역신문에 대해 매우 또는 약간 만족스럽다고 응답했다. 이중 ‘지역신문이 지역사회와 지역문화 발전에 기여하고 있다’는 데 대한 긍정 응답 비율이 83.0%로 가장 높았다. 
 
 
 
-출처 : <a href="https://youtu.be/0Di7UMLqd14"target="_blank" title="html5 speicification">
-    https://youtu.be/0Di7UMLqd14</a>
-</body>
+출처 : <a href="https://unsplash.com/ko/backgrounds"target="_blank" title="html5 speicification">
+    https://unsplash.com/ko/backgrounds</a>
+
 </html>
