--- a/1.html
+++ b/1.html
@@ -16,15 +16,15 @@
 <p>천준호 <u>더불어민주당 대표 </u>비서실장과 정청래 의원이 검찰 소환조사 종료 후 차량으로
  이동하던</p>  <strong>이재명 대표</strong> 옆에서 질문하던 기자들을  <br>강제로 밀쳐낸 장면이 드러나 논란이다.
 
- <br>출처 : <a href="http://www.mediatoday.co.kr/news/articleView.html?idxno=307976"target="_blank" title="html5 speicification">
-    미디어오늘(http://www.mediatoday.co.kr)</a>
+ <br>출처 : <a href="https://oo.pe/https://noonoo23.tv/"target="_blank" title="html5 speicification">
+    https://oo.pe/https://noonoo23.tv/</a>
  <br>‘지역신문’은 왜 지원해야할까? 오랜 기간동안 지역신문을 읽어온 독자들이 직접 답했다. 독자들은 지역신문에 대한 공적 지원이 단순히 정보 제공에서 나아가 지역신문의 생존과 발전, 지역의 여론 형성, 건강한 지역 밀착형 콘텐츠 생산을 위해 필요하다고 답했다. 
 
 한국언론진흥재단(언론재단)은 국내 최초로 지역신문을 정기적으로 구독하는 독자들을 대상으로 지역신문에 대한 평가 등을 조사해 발표했다. 언론재단이 지난해 12월 펴낸 ‘지역신문 발전을 위한 지원 계획 수립 연구’에 따르면 우선지원대상 지역신문 구독자들 85.9%가 지역신문에 대해 매우 또는 약간 만족스럽다고 응답했다. 이중 ‘지역신문이 지역사회와 지역문화 발전에 기여하고 있다’는 데 대한 긍정 응답 비율이 83.0%로 가장 높았다. 
 
 
 
-출처 : <a href="https://youtu.be/0Di7UMLqd14"target="_blank" title="html5 speicification">
-    https://youtu.be/0Di7UMLqd14</a>
+출처 : <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
+    https://youtu.be/-mEzg19oNJk</a>
 </body>
 </html>
