--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>WEB1-Welcome</title>
 <meta charset="utf-8">
 </head>
-
+<body>
 <h1><a href="index.html">WEB</a></h1>   
 <ol>
     <li><a href="1.html">HTML</a></li> 
@@ -34,5 +34,27 @@
 
 출처 : <a href="https://unsplash.com/ko/backgrounds"target="_blank" title="html5 speicification">
     https://unsplash.com/ko/backgrounds</a>
-
-</html>
+    <p>
+        <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://life-qswyigmwdh.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    
+    </p>
+    </body>
+    </html>
