--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>   
+<h1><a href="index.html">정약용</a></h1>   
+<h2>인생 교훈 글 </h2>
 <ol>
-    <li><a href="1.html">HTML</a></li> 
-    <li><a href="2.html">CSS</a></li> 
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
+    <li><a href="2.html">둘째· 자기 자신을 다스려라.</a></li> 
+    <li><a href="3.html">셋째· 말을 조심하고 갑자기 성내지마라.</a></li>
+    <li><a href="3.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
 
-<h2>WEB </h2><h3>뉴스</h3>
+<h3>뉴스</h3>
 <p><strong><u>[앵커2]</u></strong><br>
 
     <strong>강원 산지</strong>에 대설특보가 내려진 가운데 <u>영동지역</u>에 눈이 내리기 시작했습니다.<br>
