--- a/1.html
+++ b/1.html
@@ -5,26 +5,43 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>    
-<ol>
-    <li><a href="1.html">HTML</a></li> 
-    <li><a href="2.html">CSS</a></li> 
-    <li><a href="3.html">JavaScript</a></li>
+    <h1><a href="index.html">정약용</a></h1>   
+    <h2>인생 교훈 글 </h2>
+    <ol>
+        <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
+        <li><a href="2.html">둘째· 자기 자신을 다스려라.</a></li> 
+        <li><a href="3.html">셋째· 말을 조심하고 갑자기 성내지마라.</a></li>
+        <li><a href="3.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
-<h2>HTML</h2>
-<h3>뉴스</h3>
-<p>천준호 <u>더불어민주당 대표 </u>비서실장과 정청래 의원이 검찰 소환조사 종료 후 차량으로
- 이동하던</p>  <strong>이재명 대표</strong> 옆에서 질문하던 기자들을  <br>강제로 밀쳐낸 장면이 드러나 논란이다.
 
- <br>출처 : <a href="https://oo.pe/https://noonoo23.tv/"target="_blank" title="html5 speicification">
-    https://oo.pe/https://noonoo23.tv/</a>
- <br>‘지역신문’은 왜 지원해야할까? 오랜 기간동안 지역신문을 읽어온 독자들이 직접 답했다. 독자들은 지역신문에 대한 공적 지원이 단순히 정보 제공에서 나아가 지역신문의 생존과 발전, 지역의 여론 형성, 건강한 지역 밀착형 콘텐츠 생산을 위해 필요하다고 답했다. 
+<p><u>첫째·<strong>가족을 다스려라</strong>.</u><br>
 
-한국언론진흥재단(언론재단)은 국내 최초로 지역신문을 정기적으로 구독하는 독자들을 대상으로 지역신문에 대한 평가 등을 조사해 발표했다. 언론재단이 지난해 12월 펴낸 ‘지역신문 발전을 위한 지원 계획 수립 연구’에 따르면 우선지원대상 지역신문 구독자들 85.9%가 지역신문에 대해 매우 또는 약간 만족스럽다고 응답했다. 이중 ‘지역신문이 지역사회와 지역문화 발전에 기여하고 있다’는 데 대한 긍정 응답 비율이 83.0%로 가장 높았다. 
+    “네가 어떤 일을 수행할 때는 가족과의 시간을 최소화해야 한다.<br>
+    물론 이는 어려운 일이다.<br>
+    어린 자녀와 늙은 부모에게 무관심을 가지라는 것이 아니다.<br>
+    철저한 기준과 역할의 분담을 사전에 정해놓고, 이루고자 하는 일을 추구해야 한다는 것이다.<br>
+    만약 기준이 정해지지 않는다면, 너가 일을 추진함에 있어 가족들은 걸림돌이 되고 <br>
+    가족들과의 사이가 멀어질 수 있을 것이다.<br>
+    그러니 가족과의 관계에 있어 확실한 기준을 세운 후,<br>
+    이를 진행해야 가족과도 화목하고 너의 일을 이룰 수 있을 것이다”<br>
+    <br>
+    “형제간의 서로 생각날 때는 가끔 왕래하되 오래 묵어서는 안 된다.<br>
+    형제간에 우애가 돈독하더라도 어쩔 수 없는 경우에만 잠시 보고 이별해야 한다.<br>
+    형제간 서로 오래 지내다 보면 형이 아우를 우롱하는 경우가 생길 수 있으며,<br>
+    거짓된 능력을 갖췄다는 착각을 하게 된다.”<br>
+    <br>
+    “마음 공부하라 하면, 한가한 소리 하고 앉았다고 빈정댄다.<br>
+    책을 읽으라면, 따분한 말 좀 그만하라고 한다.<br>
+    온통 돈 벌 궁리와 부자가 되어 떵떵거리고 살 생각뿐이다.<br>
+    결국 이룬 것 없이 죽어 몸뚱이가 식기도 전에 이름과 같이 잊혀진다.<br>
+    자식들은 그 제물을 두고 싸움질한다.<br>
+    세상을 살다 가는 보람은 그런 것들 속에는 들어있지 않다.<br>
+    속에 품은 생각에 크기가 대인과 소인을 가른다.<br>
+    개돼지도 배부르면 기뻐한다.<br>
+    개돼지도 별걱정 없이 살다가 간다.” </p><br>
+    
 
-
-
-출처 : <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
+김다현 음악: <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
     https://youtu.be/-mEzg19oNJk</a>
 <p>
     <div id="disqus_thread"></div>
