--- a/2.html
+++ b/2.html
@@ -5,32 +5,77 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">css</a></h1>   
-<ol>
-    <li><a href="1.html">HTML</a></li> 
-    <li><a href="2.html">CSS</a></li> 
-    <li><a href="3.html">JavaScript</a></li>
+    <h1><a href="index.html">정약용</a></h1>   
+    <h2>인생 교훈 글 </h2>
+    <ol>
+        <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
+        <li><a href="2.html">둘째· 자기 자신을 다스려라.</a></li> 
+        <li><a href="3.html">셋째· 말을 조심하고 갑자기 성내지마라.</a></li>
+        <li><a href="3.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
-<h2>CSS</h2>
-<ul>
-    <li>egoing</li>
-    <li>k8805</li>
-    <li>youbin</li>
-</ul>
-<h3>css </h3><h4>뉴스</h4>
-<p>기사요약
-    ① 정영학이 자필로 적은 대장동 ‘로비 인맥도’에 등장하는 정치인와 고위 법조인들 
-    ② 2012~2014년 김만배, ‘검찰수사 무마 로비스트’로 대장동 업자들 사법 리스크 해결사 역할   
-    ③ 2012년 8월 정영학 녹취록, 김만배가 김수남에 청탁 정황... 남욱, '김만배와 김수남은 깐부'   
-    ④ 인맥도에 Lee는 ‘이재명 성남시장’ ... 지난해 재판서 정영학, “그때 Lee라고 적은 이유 따로 있다” </p>  <strong>이재명 대표</strong> 옆에서 질문하던 기자들을  <br>강제로 밀쳐낸 장면이 드러나 논란이다.
 
- <br>출처 : <a href="https://oo.pe/https://noonoo23.tv/"target="_blank" title="html5 speicification">
-    https://oo.pe/https://noonoo23.tv/</a>
- <br>‘지역신문’은 왜 지원해야할까? 오랜 기간동안 지역신문을 읽어온 독자들이 직접 답했다. 독자들은 지역신문에 대한 공적 지원이 단순히 정보 제공에서 나아가 지역신문의 생존과 발전, 지역의 여론 형성, 건강한 지역 밀착형 콘텐츠 생산을 위해 필요하다고 답했다. 
+<p>둘째· <strong>자기 자신을 다스려라</strong>.<br>
 
-한국언론진흥재단(언론재단)은 국내 최초로 지역신문을 정기적으로 구독하는 독자들을 대상으로 지역신문에 대한 평가 등을 조사해 발표했다. 언론재단이 지난해 12월 펴낸 ‘지역신문 발전을 위한 지원 계획 수립 연구’에 따르면 우선지원대상 지역신문 구독자들 85.9%가 지역신문에 대해 매우 또는 약간 만족스럽다고 응답했다. 이중 ‘지역신문이 지역사회와 지역문화 발전에 기여하고 있다’는 데 대한 긍정 응답 비율이 83.0%로 가장 높았다. 
-
-
+    <br>“밉게 보면 잡초 아닌 풀이 없고, 곱게 보면 꽃 아닌 사람이 없으되 그대를 꽃으로 볼 일이로다.
+    <br>털려고 들면 먼지 없는 이 없고, 덮으려고 들면 못 덮을 허물 없으되, 
+    <br>누구의 눈에 들기는 힘들어도 그 눈 밖에 나기는 한 순간이다”<br>
+    
+    <br> “나를 사랑하는 사람은 남을 사랑하게 되어 있다.
+    <br>사람들은 흔히 남들이 자기를 알아주길 원하지만 정작 남을 이해하려고 노력하지 않는다.
+    <br>듣기보다 자기 말하기 바쁘다.
+    <br>그러나 나를 사랑하면, 그 사랑이 점차 가까운 사람에게로 퍼져나간다.
+    <br>예의는 나를 대하듯 남을 대하는 데에서 시작되며, 존경은 돌려받는 것이다.
+    <br>자신을 사랑하는 것은 그만큼 고차원적인 것이다”
+    <br>
+    <br>“비겁함을 인정하라.
+    <br>우리는 자신에게 부끄럽지 않은 삶을 살고 싶지만, 
+    <br>시대가 나를 휘감고 내가 시대에 사는 한 삶에서 비겁해질 수밖에 없다.
+    <br>어른이 된다는 것은 생의 비겁함을 인정하고 그것과 화해하는 것이다”
+    <br>나이가 들면서 눈이 침침한 것은 보지 말고, 필요한 큰 것만 보라는 것이며.
+    <br>귀가 잘 안 들리는 것은 필요 없는 작은 말은 듣지 말고, 필요한 큰 말만 들으라는 것이고.
+    <br>이가 시린 것은 연한음식만 먹고 소화불량 없게 하려 함이고.
+    <br>걸음걸이가 부자연스러운 것은 매사에 조심하고 멀리 가지 말라는 것이다.
+    <br>머리가 하얗게 되는 것은 멀리 있어도 나이 든 사람의 것을 알아보게 하려는 조물주의 배려이다.
+    <br>정신이 깜박거리는 것은 살아온 세월을 다 기억하지 말라는 것이고 지나온 세월을 다 기억하면 
+    <br>아마도 머리가 핑하고 돌아버린다. 좋은 기억과 아름다운 추억만 기억하라“
+    <br>
+    <br>”사람은 감정의 동물인지라 늘 허물이 뒤따른다.
+    <br>허물이야 누구든 없을 수 없다, 하지만 허물이 있을 때 이를 돌이켜 뉘우치는가, 
+    <br>아니면 없던 일로 덮어두는가에 따라 성인과 광인이 갈린다.
+    <br>성인은 끊임없이 자신을 돌이켜 반성하여 향상하는 사람이다.
+    <br>광인은 제 재주만 믿고 남의 탓만 하며 투덜대다 제풀에 주저앉는 사람이다.
+    <br>성인의 길로 갈까 아니면 미치광이의 길을 따를까, 뉘우침이란 한 단어에 그 갈림이 놓인다“
+    <br>
+    <br>”자기 자신을 지키는 것이 무엇보다 소중하고 어렵다.
+    <br>자신에게 있지 않은 물건을 바라보고 가리키면서 저것이라 말하고,
+    <br>자신에게 있는 것을 깨닫고 굽어보면서 이것이라고 말한다.
+    <br>이것은 내가 이미 내 몸에 지닌 것이다.
+    <br>그러나 내가 이미 지닌 것이 나의 바람에 미치지 못하면, 
+    <br>마음은 만족할만한 것을 선망하여 바라보고 가리키면서 저것이라고 말하기 마련이니 
+    <br>이것은 천하의 공통된 병통이다“
+    <br>
+    <br>”그런 인생은 없는 것과 같다.
+    <br>우리가 배불리 먹고 따뜻하게 입으며, 
+    <br>종신토록 근심 없이 지내다가 죽는 날 사람과 뼈가 함께 썩어버리고 
+    <br>한 상자에 글도 전할 것이 없다면 그런 인생은 없는 것과 같다.
+    <br>그런 것을 일컬어 인생이라 한다면 그의 인생이란 짐승과 다를 바가 없을 것이다“
+    <br>
+    <br>”욕심은 버리는 것이 아니라 다스리는 것이다.
+    <br>사람의 욕망이나 감정은 옳고 그름을 따질 수 없다.
+    <br>그것을 절제하지 못하거나 빠져서 헤어 나오지 못하거나 
+    <br>다른 사람에게 피해를 주거나 악한 목적으로 쓴다면 바르지 못한 것이다.
+    <br>당연히 기뻐할 것을 기뻐하고 분노해야 할 것에 분노한다고 하면 
+    <br>그것은 하늘의 도심에 맞는 것이다“
+    <br>
+    <br>”괴로움과 즐거움에 대처하는 방법
+    <br>즐거움은 괴로움에서 나온다 그러므로 괴로움은 즐거움의 뿌리다
+    <br>괴로움은 즐거움에서 나온다 그러므로 즐거움은 괴로움의 씨앗이다.
+    <br>괴로움과 즐거움이 서로를 낳는 것은 동정이나 음양이 서로 서로의 뿌리가 되는 것과 같다.
+    <br>통달한 사람은 그 연유를 알아 기대고 엎드림을 살피고, 
+    <br>성하고 쇠함을 헤아려 내 마음이 상황에 반응하는 것을 
+    <br>늘 일반적인 정리와 반대가 되게끔 한다“ </p> 
+    <br>
+ 
 
 출처 : <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
     https://youtu.be/-mEzg19oNJk</a>
