--- a/1.html
+++ b/1.html
@@ -11,12 +11,12 @@
         <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
         <li><a href="2.html">둘째· 자기 자신을 다스려라.</a></li> 
         <li><a href="3.html">셋째· 말을 조심하고 갑자기 성내지마라.</a></li>
-        <li><a href="3.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
+        <li><a href="4.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
 
 <p><u>첫째·<strong>가족을 다스려라</strong>.</u><br>
 
-    “네가 어떤 일을 수행할 때는 가족과의 시간을 최소화해야 한다.<br>
+    <br>“네가 어떤 일을 수행할 때는 가족과의 시간을 최소화해야 한다.<br>
     물론 이는 어려운 일이다.<br>
     어린 자녀와 늙은 부모에게 무관심을 가지라는 것이 아니다.<br>
     철저한 기준과 역할의 분담을 사전에 정해놓고, 이루고자 하는 일을 추구해야 한다는 것이다.<br>
@@ -41,8 +41,8 @@
     개돼지도 별걱정 없이 살다가 간다.” </p><br>
     
 
-김다현 음악: <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
-    https://youtu.be/-mEzg19oNJk</a>
+    임영웅 어느 60대 노부부 이야기 : <a href="어느 60대 노부부 이야기.mp3"target="_blank" title="html5 speicification">
+        https://youtu.be/-mEzg19oNJk</a><br>
 <p>
     <div id="disqus_thread"></div>
 <script>
