--- a/2.html
+++ b/2.html
@@ -11,10 +11,10 @@
         <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
         <li><a href="2.html">둘째· 자기 자신을 다스려라.</a></li> 
         <li><a href="3.html">셋째· 말을 조심하고 갑자기 성내지마라.</a></li>
-        <li><a href="3.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
+        <li><a href="4.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
 
-<p>둘째· <strong>자기 자신을 다스려라</strong>.<br>
+<p><u>둘째· <strong>자기 자신을 다스려라</strong>.</u><br>
 
     <br>“밉게 보면 잡초 아닌 풀이 없고, 곱게 보면 꽃 아닌 사람이 없으되 그대를 꽃으로 볼 일이로다.
     <br>털려고 들면 먼지 없는 이 없고, 덮으려고 들면 못 덮을 허물 없으되, 
@@ -77,8 +77,8 @@
     <br>
  
 
-출처 : <a href="https://youtu.be/-mEzg19oNJk"target="_blank" title="html5 speicification">
-    https://youtu.be/-mEzg19oNJk</a>
+   임영웅 마량에 가고싶다: : <a href="마량에 가고싶다.mp3"target="_blank" title="html5 speicification">
+    https://youtu.be/-mEzg19oNJk</a><br>
 <p>
     <div id="disqus_thread"></div>
 <script>
