--- a/4.html
+++ b/4.html
@@ -70,7 +70,7 @@
     </p><br>
     
 
-임영웅 바보같지만: <a href="음악"target="_blank" title="html5 speicification">
+임영웅 바보같지만: <a href="음악1/바보같지만.mp3"target="_blank" title="html5 speicification">
     https://youtu.be/-mEzg19oNJk</a><br>
 
 <p>
