--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">다산 정약용</a></h1>   
+    <h1><a href="정약용.html">정약용</a></h1>   
     <h2>인생 교훈 글 </h2>
     <ol>
         <li><a href="1.html">첫째· 가족을 다스려라.</a></li> 
