--- a/2.html
+++ b/2.html
@@ -14,6 +14,7 @@
         <li><a href="4.html">넷째· 항상 겸손하고 일희일비하지 말라.</a></li>
 </ol>
 
+  
 <p><u>둘째· <strong>자기 자신을 다스려라</strong>.</u><br>
 
     <br>“밉게 보면 잡초 아닌 풀이 없고, 곱게 보면 꽃 아닌 사람이 없으되 그대를 꽃으로 볼 일이로다.
@@ -79,6 +80,9 @@
 
    임영웅 마량에 가고싶다: : <a href="마량에 가고싶다.mp3"target="_blank" title="html5 speicification">
     https://youtu.be/-mEzg19oNJk</a><br>
+
+    <br><img src="겨울1.jpg"width="30%"><br>
+
 <p>
     <div id="disqus_thread"></div>
 <script>
