--- a/1.html
+++ b/1.html
@@ -40,9 +40,12 @@
     개돼지도 배부르면 기뻐한다.<br>
     개돼지도 별걱정 없이 살다가 간다.” </p><br>
     
-
+   
     임영웅 어느 60대 노부부 이야기 : <a href="임영웅 어느 60대 노부부.mp3"target="_blank" title="html5 speicification">
         https://youtu.be/-mEzg19oNJk</a><br>
+
+ <br>  <img src="호수공원.jpg"width="50%"><br>  
+
 <p>
     <div id="disqus_thread"></div>
 <script>
